# arm-trusted-firmware

./: .Jenkinsfile  .gitignore  build.py  build.sh
bl2/: bl2.ld.S
drivers/ti/uart/aarch64/: 16550_console.S
include/lib/libc/: string.h
plat/seehi/rhea/: io_flash.c  io_mmc.c  plat_helper.S  plat_io_storage.c  plat_rhea_common.c  platform.mk
plat/seehi/rhea/bl1/: bl1_img_desc.c  plat_bl1_setup.c
plat/seehi/rhea/bl2/: plat_bl2_setup.c  rhea_bl2_mem_params_desc.c  rhea_pcie_ep.c
plat/seehi/rhea/bl31/: plat_bl31_setup.c  rhea_gicv3.c  rhea_gicv3.h  rhea_pm.c  rhea_topology.c
plat/seehi/rhea/doc/: rhea_boot_flow.drawio
plat/seehi/rhea/drivers/cru/inc/: cru.h
plat/seehi/rhea/drivers/cru/src/: cru.c
plat/seehi/rhea/drivers/dram/inc/: dram.h  mc.h
plat/seehi/rhea/drivers/dram/src/: dram.c  mc.c
plat/seehi/rhea/drivers/mmc/dw_mmc/inc/: dw_mmc.h
plat/seehi/rhea/drivers/mmc/dw_mmc/src/: dw_mmc.c
plat/seehi/rhea/drivers/pcie_ep/inc/: pcie.h  pcie_ep.h
plat/seehi/rhea/drivers/pcie_ep/src/: pcie.c  pcie_ep.c  rhea_pcie_ep.c
plat/seehi/rhea/drivers/spi/dw_apb_ssi/src/: dw_apb_ssi.c
plat/seehi/rhea/include/: chip.h  io_flash.h  io_mmc.h  plat_common.h  platform_def.h
plat/seehi/rhea/libs/seehi_secureboot/inc/: seehi_secureboot.h
plat/seehi/rhea/libs/seehi_secureboot/src/: seehi_secureboot.c
tools/fiptool/: fiptool.c
tools/seehi/fwu/: cycle_fwu.sh  fip_updater.py  fwu_sram.default
tools/seehi/gen_signature/: generate_ecdsa_signature.py
tools/seehi/time_stamp/: CMakeLists.txt
tools/seehi/time_stamp/src/: time_stamp_interpreter.c
(+3 files in other folders)
